--- a/spa/src/css/App.css
+++ b/spa/src/css/App.css
@@ -1,3 +1,84 @@
 * {
   box-sizing: border-box;
 }
+
+.master-outer-div {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.master-inner-div {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0px 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.left-outer-container {
+  width: 20%;
+}
+
+.left-inner-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0 15px 0 0;
+}
+
+.nav-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-right: 25px;
+  border-right: 1px solid #3b5998;
+}
+
+.single-nav-icon {
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+}
+
+.single-nav-icon svg {
+  font-size: 2em;
+  color: #3b5998;
+}
+
+.single-nav-icon h3 {
+  color: #3b5998;
+  margin-top: 0px;
+}
+
+.right-outer-container {
+  width: 80%;
+}
+
+.right-inner-container {
+  width: 100%;
+}
+
+@media all and (max-width: 768px) {
+  .left-outer-container {
+    width: 100%;
+  }
+  .nav-container {
+    padding-right: 0px; 
+    border: none;
+  }
+  .right-outer-container {
+    width: 100%;
+  }
+  
+}
