--- a/spa/src/css/App.css
+++ b/spa/src/css/App.css
@@ -41,14 +41,16 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding-right: 25px;
-  border-right: 1px solid #3b5998;
+  padding:  0 25px 25px 25px;
+  border: 1px solid #3b5998;
+  border-radius: 5px;
 }
 
 .single-nav-icon {
   width: 100%;
   text-align: center;
   cursor: pointer;
+  margin-top: 25px;
 }
 
 .single-nav-icon svg {
@@ -70,7 +72,7 @@
 
 .single-nav-icon h3 {
   color: #3b5998;
-  margin-top: 0px;
+  margin: 0px;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;
@@ -85,16 +87,68 @@
   width: 100%;
 }
 
+.home-outer-container {
+  padding: 15px;
+}
+
+.home-intro {
+  width: 100%;
+  padding: 15px 15px 0px 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  border: 1px solid #3b5998;
+}
+
+.home-intro h3 {
+  margin-top: 0px;
+}
+
+.outer-library-container {
+  width: 100%;
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.library-container {
+  width: 49%;
+  border: 1px solid #3b5998;
+  border-radius: 5px;
+  padding: 15px;
+}
+
+.library-container h3 {
+  margin-top: 0px;
+}
+
+.library-container ul {
+  margin: 0px;
+}
+
 @media all and (max-width: 768px) {
+  .master-inner-div {
+    padding: 25px;
+  }
   .left-outer-container {
     width: 100%;
   }
+  .left-inner-container {
+    padding: 0px;
+  }
   .nav-container {
-    padding-right: 0px; 
+    padding: 0px; 
     border: none;
   }
   .right-outer-container {
     width: 100%;
   }
-  
+  .single-nav-icon {
+    width: 25%;
+    margin: 0px;
+  }
+  .library-container {
+    width: 100%;
+    margin-top: 15px;
+  }
 }
