--- a/spa/src/css/App.css
+++ b/spa/src/css/App.css
@@ -144,7 +144,8 @@
     width: 100%;
   }
   .single-nav-icon {
-    width: 25%;
+    width: 20%;
+    padding: 0 5px;
     margin: 0px;
   }
   .library-container {
