--- a/spa/src/css/App.css
+++ b/spa/src/css/App.css
@@ -145,7 +145,7 @@
 .project-list-container {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 15px;
