--- a/spa/src/css/App.css
+++ b/spa/src/css/App.css
@@ -235,7 +235,7 @@
 .about-container {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -243,17 +243,29 @@
 .left-about-container {
   width: 23%;
   margin-right: 2%;
+  text-align: center;
+  border-radius: 5px;
+  border: 1px solid #3b5998;
+  padding: 15px;
 }
 
 .left-about-container img {
   width: 100%;
+  max-width: 200px;
   border-radius: 50%;
 }
 
 .right-about-container {
   width: 75%;
+  border-radius: 5px;
+  padding: 15px;
+  border: 1px solid #3b5998;
 }
 
+.right-about-container a {
+  color: #3b5998;
+  text-decoration: none;
+}
 
 @media all and (max-width: 768px) {
   .master-inner-div {
