--- a/spa/src/css/App.css
+++ b/spa/src/css/App.css
@@ -17,7 +17,7 @@
   margin: 0 auto;
   padding: 0px 25px;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   margin: 15px 0px;
