--- a/spa/src/css/App.css
+++ b/spa/src/css/App.css
@@ -16,6 +16,21 @@ a:hover {
   color: #8b9dc3;
 }
 
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
+
 .master-outer-div {
   width: 100%;
   min-height: 100vh;
