--- a/spa/src/css/App.css
+++ b/spa/src/css/App.css
@@ -10,6 +10,7 @@ a {
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  word-wrap: break-word;
 }
 
 a:hover {
